--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
   },
   "dependencies": {
     "@lucid-agents/core": "latest",
+    "@lucid-agents/hono": "0.7.20",
     "@lucid-agents/http": "latest",
-    "@lucid-agents/hono": "latest",
     "@lucid-agents/payments": "latest",
+    "ethers": "^6.16.0",
     "hono": "^4.0.0",
     "zod": "^4.0.0"
   }
